k8s/email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
        - name: email
          image: mraza176/citrusops-email:v3
          imagePullPolicy: IfNotPresent
