k8s/slack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack
  template:
    metadata:
      labels:
        app: slack
    spec:
      containers:
        - name: slack
          image: mraza176/citrusops-slack:v3
          imagePullPolicy: IfNotPresent
