k8s/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: citrusops
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mraza176/citrusops-client:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
