k8s/cronjob.yaml
apiVersion: v1
kind: Service
metadata:
  name: cronjob
  namespace: citrusops
spec:
  selector:
    app: cronjob
  ports:
    - port: 50059
      targetPort: 50059
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cronjob
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cronjob
  template:
    metadata:
      labels:
        app: cronjob
    spec:
      containers:
        - name: cronjob
          image: mraza176/citrusops-cronjob:v2
          imagePullPolicy: IfNotPresent
