k8s/nats.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: citrusops
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: monitoring
      port: 8222
      targetPort: 8222
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          ports:
            - containerPort: 4222
              name: client
            - containerPort: 8222
              name: monitoring
