k8s/web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: citrusops
spec:
  selector:
    app: web-app
  ports:
    - port: 8000
      targetPort: 8000
    - port: 3000
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: citrusops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: mraza176/citrusops-web-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
        - name: client
          image: mraza176/citrusops-client:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
